{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 186,
  "lineage": "1359789f-6a37-92a0-992b-cd413ecb1395",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:route-table/rtb-02688858522457f5c",
            "default_route_table_id": "rtb-02688858522457f5c",
            "id": "rtb-02688858522457f5c",
            "owner_id": "943869766938",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ed618e7e0165686",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "vpc_id": "vpc-01112210914db7622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k3s",
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:internet-gateway/igw-03ed618e7e0165686",
            "id": "igw-03ed618e7e0165686",
            "owner_id": "943869766938",
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "vpc_id": "vpc-01112210914db7622"
          },
          "dependencies": [
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:security-group/sg-0ec8edb429ae02b74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec8edb429ae02b74",
            "ingress": [
              {
                "cidr_blocks": [
                  "52.13.59.179/32"
                ],
                "description": "Wireguard VPN SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Consul LAN Serf",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "Consul LAN Serf",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "Server RPC",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8300
              }
            ],
            "name": "common-sglodek",
            "name_prefix": "",
            "owner_id": "943869766938",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "timeouts": null,
            "vpc_id": "vpc-01112210914db7622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:security-group/sg-0962421bccc8f2ff1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0962421bccc8f2ff1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "WAN Serf",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [],
                "description": "WAN Serf",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              }
            ],
            "name": "consul-sglodek",
            "name_prefix": "",
            "owner_id": "943869766938",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "timeouts": null,
            "vpc_id": "vpc-01112210914db7622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:security-group/sg-0fac8be26a8304bb0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fac8be26a8304bb0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0b8ee36ca701aed6e"
                ],
                "self": true,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "Kubelet metrics",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8ee36ca701aed6e"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Kubernetes API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8ee36ca701aed6e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "k3s embedded etc",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              }
            ],
            "name": "k3s-server-sglodek",
            "name_prefix": "",
            "owner_id": "943869766938",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "timeouts": null,
            "vpc_id": "vpc-01112210914db7622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k3s",
            "aws_security_group.k3s-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:security-group/sg-0b8ee36ca701aed6e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8ee36ca701aed6e",
            "ingress": [],
            "name": "k3s-worker-sglodek",
            "name_prefix": "",
            "owner_id": "943869766938",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "timeouts": null,
            "vpc_id": "vpc-01112210914db7622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:subnet/subnet-02128e5c1215c9fe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02128e5c1215c9fe5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "943869766938",
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            },
            "vpc_id": "vpc-01112210914db7622"
          },
          "dependencies": [
            "aws_vpc.k3s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:943869766938:vpc/vpc-01112210914db7622",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe9ad6dacb6de877",
            "default_route_table_id": "rtb-02688858522457f5c",
            "default_security_group_id": "sg-0355030620f6a5dd6",
            "dhcp_options_id": "dopt-dab84abf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01112210914db7622",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02688858522457f5c",
            "owner_id": "943869766938",
            "tags_all": {
              "Name": "k3s-sglodek",
              "owner": "sglodek"
            }
          }
        }
      ]
    }
  ]
}